# flashboard

./: .editorconfig  .flake8  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  setup.py  wsgi.py
config/: config.py  logging.json  rbac.py  settings.py
flashboard/: __init__.py  apis.py  app.py  base.py  database.py  dtos.py  factories.py  forms.py  models.py  rbac.py  services.py  utils.py  views.py
flashboard/templates/: activate.html  home.html  layout.html  login.html  navigator.html  signup.html
flashboard/translations/zh_Hans_CN/LC_MESSAGES/: messages.po
knowall/: __init__.py  models.py  services.py  views.py
knowall/templates/: column_detail.html  column_list.html  macros.html  proj_detail.html  proj_list.html  proj_list_index.html  table_detail.html  table_list.html
migrations/versions/: 1fee8919d2fa_.py
tests/: conftest.py  test_apis.py  test_flashboard.py  test_knowall.py  test_utility.py
