[tool.poetry]
name = "flashboard"
version = "0.1.0"
description = ""
authors = ["robinmin <luonbin@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-login = "^0.4.1"
flask-praetorian = "^1.0"
Flask-Migrate = "^2.5"
Flask-Script = "^2.0"
Flask-SQLAlchemy = "^2.4"
Flask-WTF = "^0.14.2"
flask-cors = "^3.0"
passlib = "^1.7"
Flask-Admin = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
