[tool.poetry]
name = "flashboard"
version = "0.1.0"
description = ""
authors = ["robinmin <luonbin@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-login = "^0.4.1"
Flask-Migrate = "^2.5"
Flask-Script = "^2.0"
Flask-SQLAlchemy = "^2.4"
Flask-WTF = "^0.14.2"
flask-cors = "^3.0"
passlib = "^1.7"
Flask-Admin = "^1.5"
flask-mail = "^0.9.1"
gunicorn = "^19.9"
flask-restplus = "^0.13.0"
pyjwt = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"
autopep8 = "^1.4"
flask-sqlacodegen = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
