[tool.poetry]
name = "flashboard"
version = "0.1.0"
description = ""
authors = ["robinmin <luonbin@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-login = "^0.4.1"
Flask-Migrate = "^2.5"
Flask-Script = "^2.0"
Flask-SQLAlchemy = "^2.4"
Flask-WTF = "^0.14.2"
flask-cors = "^3.0"
passlib = "^1.7"
Flask-Admin = "^1.5"
flask-mail = "^0.9.1"
gunicorn = "^19.9"
flask-restplus = "^0.13.0"
pyjwt = "^1.7"
sentry-sdk = "=0.13.0"
celery = "^4.3"
psycopg2 = "^2.8"
flask-babel = "^0.12.2"
redis = "^3.3"
kombu = "=4.6.3"


[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"
autopep8 = "^1.4"
flask-sqlacodegen = "^1.1"
flask-debugtoolbar = "^0.10.1"
pylint = "^2.4"
flake8 = "^3.7"
flower = "^0.9.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

